AH 156: remove require(:user)
